<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="22dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/image_01"
            android:layout_width="120dp"
            android:layout_height="68dp"
            android:layout_marginLeft="@dimen/the_space"
            android:scaleType="fitStart"
            android:src="@mipmap/sample_01" />

        <TextView
            android:id="@+id/text_01"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="@dimen/the_space"
            android:layout_toRightOf="@+id/image_01"
            android:maxLines="2"
            android:text="@string/item_app_string01"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="@dimen/the_space"
            android:layout_marginTop="36dp"
            android:layout_toRightOf="@+id/image_01"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/item_app_string02"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="@dimen/the_space"
            android:layout_toRightOf="@+id/image_01"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/item_app_string03"
            android:textColor="@color/gray"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />
</LinearLayout>